Finished programming the pop-ups and hover-triggered alternate versions of images on the character page!

--- a/public/character-art.html
+++ b/public/character-art.html
@@ -24,42 +24,124 @@
         <div class="text-box">
             <a href="../index.html"><h1><span class="username">@ghost.with.a.pulse</span> Online Art Portfolio</h1></a>
             <h2>Character Illustrations</h2>
-            <p>Tip: Hover over the images below to find out more about each piece.</p>
+            <p>Tip: Click on the images below to find out more about each piece.</p>
         </div>
 
         <!-- The Art -->
         <div class="art-box">
-            <img src="../assets/images/art-images/characters/Fairy.jpg" alt="An illustration of a fairy with feathered wings scattering petals in a forest.">
-            <img src="../assets/images/art-images/characters/Bat.jpg" alt="An illustration of a bruised bat character falling.">
-            <img src="../assets/images/art-images/characters/Candyfloss.jpg" alt="An illustration of a dog character playing the drums.">
-            <img src="../assets/images/art-images/characters/Con-mascot.jpg" alt="An illustration of a dog character holding a sheep plushie and a balloon with a smiley face on it on a garden path at night.">
-            <img src="../assets/images/art-images/characters/Corpsie-badge.jpg" alt="An illustration of an adult hare with a child hare (anthro) both covered in stitches, wearing post-apocalyptic attire with a map and the name 'Corpsie' in the background.">
-            <img src="../assets/images/art-images/characters/Dog.jpg" alt="An illustration of a dog character in casual clothes sitting on a pile of emojis: one smiling, one frowning and one with a wobbly mouth.">
-            <img src="../assets/images/art-images/characters/Fable.jpg" alt="An illustration of a black kitten with big green eyes.">
-            <img src="../assets/images/art-images/characters/Gazelle-duck.jpg" alt="An illustration of a gazelle duck hybrid standing in a demon summoning circle looking rather confused.">
-            <img src="../assets/images/art-images/characters/Hare.jpg" alt="An illustration of a hare character wearing a hoodie, flower crown and tights.">
-            <img src="../assets/images/art-images/characters/Izzy.jpg" alt="An illustration of a rhino character playing Dance Dance Revolution.">
-            <img src="../assets/images/art-images/characters/Lovis.jpg" alt="An illustration of a rabbit character wearing overalls.">
-            <img src="../assets/images/art-images/characters/Nix-bunny.jpg" alt="An illustration of a rabbit-like character with an umbrella standing on the Auckland Sky Tower.">
-            <img src="../assets/images/art-images/characters/NPCs.jpg" alt="An illustration of four children wearing animal onesies.">
-            <img src="../assets/images/art-images/characters/Nyx-in-cave.jpg" alt="An illustration of a dragon in a cave filled with crystals and human skeletons.">
-            <img src="../assets/images/art-images/characters/Nyx-in-space.jpg" alt="An illustration of a dragon standing on a rock with a galaxy background.">
-            <img src="../assets/images/art-images/characters/Obsidian.jpg" alt="An illustration of a calico cat vampire wearing old fashioned men's wear with a grunge background.">
-            <img src="../assets/images/art-images/characters/Oxifawkes-reaper-1.jpg" alt="An illustration of a fox reaper wearing a dress and holding a scythe.">
-            <img src="../assets/images/art-images/characters/Phantasm-full-body.jpg" alt="An illustration of a creature with an elephant's trunk and a dragon-like body with feathered wings.">
-            <img src="../assets/images/art-images/characters/Piggie-back.jpg" alt="An illustration of a boy carrying a girl on his back. The girl has fox ears and a tail.">
-            <img src="../assets/images/art-images/characters/Purple-kitty.jpg" alt="An illustration of a purple snow leopard character.">
-            <img src="../assets/images/art-images/characters/Relay.jpg" alt="An illustration of a dog character driving a mini train.">
-            <img src="../assets/images/art-images/characters/Rudolph.jpg" alt="An illustration of a scary reindeer eating Christmas lights with spooky elves peeking in through the windows.">
-            <img src="../assets/images/art-images/characters/Spook-phantasm-kiss.jpg" alt="An illustration of an elephant / dragon-like creature kissing a black dog character. The words, 'You really don't know how to kiss' are in the background because the creature has the dog's whole muzzle in its mouth.">
-            <img src="../assets/images/art-images/characters/Spook-werewolf.jpg" alt="An illustration of a black dog werewolf snarling with a red background.">
-            <img src="../assets/images/art-images/characters/Game-art.PNG" alt="An illustration of a woman standing under a maple tree wearing a straw hat.">
+            <img src="../assets/images/art-images/characters/Fairy.jpg" alt="An illustration of a fairy with feathered wings scattering petals in a forest." onclick="popUp('character', 1)">
+            <img src="../assets/images/art-images/characters/Bat.jpg" alt="An illustration of a bruised bat character falling." onclick="popUp('character', 2)">
+            <img src="../assets/images/art-images/characters/Candyfloss.jpg" alt="An illustration of a dog character playing the drums." onclick="popUp('character', 3)">
+            <img src="../assets/images/art-images/characters/Con-mascot.jpg" alt="An illustration of a dog character holding a sheep plushie and a balloon with a smiley face on it on a garden path at night." onclick="popUp('character', 4)">
+            <img src="../assets/images/art-images/characters/Corpsie-badge.jpg" alt="An illustration of an adult hare with a child hare (anthro) both covered in stitches, wearing post-apocalyptic attire with a map and the name 'Corpsie' in the background." onclick="popUp('character', 5)">
+            <img src="../assets/images/art-images/characters/Dog.jpg" alt="An illustration of a dog character in casual clothes sitting on a pile of emojis: one smiling, one frowning and one with a wobbly mouth." onclick="popUp('character', 6)">
+            <img src="../assets/images/art-images/characters/Fable-1.jpg" id="fable" alt="An illustration of a black kitten with big green eyes." onclick="popUp('character', 7)" onmouseenter="changeVersion('Fable')" onmouseleave="changeVersionBack('Fable')">
+            <img src="../assets/images/art-images/characters/Gazelle-duck.jpg" alt="An illustration of a gazelle duck hybrid standing in a demon summoning circle looking rather confused." onclick="popUp('character', 8)">
+            <img src="../assets/images/art-images/characters/Hare.jpg" alt="An illustration of a hare character wearing a hoodie, flower crown and tights." onclick="popUp('character', 9)">
+            <img src="../assets/images/art-images/characters/Izzy.jpg" alt="An illustration of a rhino character playing Dance Dance Revolution." onclick="popUp('character', 10)">
+            <img src="../assets/images/art-images/characters/Lovis.jpg" alt="An illustration of a rabbit character wearing overalls." onclick="popUp('character', 11)">
+            <img src="../assets/images/art-images/characters/Nix-bunny.jpg" alt="An illustration of a rabbit-like character with an umbrella standing on the Auckland Sky Tower." onclick="popUp('character', 12)">
+            <img src="../assets/images/art-images/characters/NPCs.jpg" alt="An illustration of four children wearing animal onesies." onclick="popUp('character', 13)">
+            <img src="../assets/images/art-images/characters/Nyx-in-cave.jpg" alt="An illustration of a dragon in a cave filled with crystals and human skeletons." onclick="popUp('character', 14)">
+            <img src="../assets/images/art-images/characters/Nyx-in-space.jpg" alt="An illustration of a dragon standing on a rock with a galaxy background." onclick="popUp('character', 15)">
+            <img src="../assets/images/art-images/characters/Obsidian.jpg" alt="An illustration of a calico cat vampire wearing old fashioned men's wear with a grunge background." onclick="popUp('character', 16)">
+            <img src="../assets/images/art-images/characters/Oxifawkes-reaper-2.jpg" id="reaper" alt="An illustration of a fox reaper wearing a dress and holding a scythe." onclick="popUp('character', 17)" onmouseenter="changeVersion('Reaper')" onmouseleave="changeVersionBack('Reaper')">
+            <img src="../assets/images/art-images/characters/Phantasm-full-body.jpg" alt="An illustration of a creature with an elephant's trunk and a dragon-like body with feathered wings." onclick="popUp('character', 18)">
+            <img src="../assets/images/art-images/characters/Piggie-back.jpg" alt="An illustration of a boy carrying a girl on his back. The girl has fox ears and a tail." onclick="popUp('character', 19)">
+            <img src="../assets/images/art-images/characters/Purple-kitty.jpg" alt="An illustration of a purple snow leopard character." onclick="popUp('character', 20)">
+            <img src="../assets/images/art-images/characters/Relay.jpg" alt="An illustration of a dog character driving a mini train." onclick="popUp('character', 21)">
+            <img src="../assets/images/art-images/characters/Rudolph.jpg" alt="An illustration of a scary reindeer eating Christmas lights with spooky elves peeking in through the windows." onclick="popUp('character', 22)">
+            <img src="../assets/images/art-images/characters/Spook-phantasm-kiss.jpg" alt="An illustration of an elephant / dragon-like creature kissing a black dog character. The words, 'You really don't know how to kiss' are in the background because the creature has the dog's whole muzzle in its mouth." onclick="popUp('character', 23)">
+            <img src="../assets/images/art-images/characters/Spook-werewolf.jpg" alt="An illustration of a black dog werewolf snarling with a red background." onclick="popUp('character', 24)">
+            <img src="../assets/images/art-images/characters/Game-art-1.PNG" id="maple" alt="An illustration of a woman standing under a maple tree wearing a straw hat." onclick="popUp('character', 25)" onmouseenter="changeVersion('MapleTree')" onmouseleave="changeVersionBack('MapleTree')">
         </div>
+
+        <!-- Text Pop-Up -->
+        <div class="pop-up-box" id="char-pop-up">
+            <p id="char-fairy">
+                Personal character art based on GhostWithAPulse's childhood drawings.
+            </p>
+            <p id="char-bat">
+                Personal character art made for a 'Goretober' art prompt list. The prompt used for this one was 'bruises.'
+            </p>
+            <p id="char-candyfloss">
+                Character art for a friend. This one belongs to Ven.
+            </p>
+            <p id="char-mascot">
+                An entry for an art competition run by <a href="https://furconz.org.nz/">FurcoNZ</a>.
+            </p>
+            <p id="char-corpsie-badge">
+                Personal character art made for a post-apocalyptic themed event.
+            </p>
+            <p id="char-dog">
+                Gift art for <a href="https://toyhou.se/CashPuppy">CashPuppy</a>.
+            </p>
+            <p id="char-fable">
+                Personal art of GhostWithAPulse's cat.
+            </p>
+            <p id="char-gazelle-duck">
+                Gift art for TheDerpyHyena.
+            </p>
+            <p id="char-hare">
+                Personal character art.
+            </p>
+            <p id="char-izzy">
+                Gift art for dazer_dude.
+            </p>
+            <p id="char-lovis">
+                Personal character art - a train conductor from a whimsical story written by Oxillious and GhostWithAPulse.
+            </p>
+            <p id="char-nix">
+                Gift art of Raya - a character belonging to Heliocathus.
+            </p>
+            <p id="char-npcs">
+                Four NPCs designed for the game, <a href="https://github.com/JohnathanLancelot/I-Made-You-A-Happy-World" class="game-link">'I Made You a Happy World'</a> — a psychological fantasy game created by Ana Karpova, Tianze Xie & GhostWithAPulse.
+            </p>
+            <p id="char-nyx-cave">
+                Gift art of Nyx - a character belonging to Ava.
+            </p>
+            <p id="char-nyx-space">
+                Gift art of Nyx - a character belonging to Ava.
+            </p>
+            <p id="char-obsidian">
+                Gift art of Obsidian - a character belonging to Alyss.
+            </p>
+            <p id="char-reaper">
+                Gift art of Oxifawkes - a character belonging to Oxillious.
+            </p>
+            <p id="char-phantasm-fullbody">
+                Personal character art - a drawing of a bizarre chimera dreamt up by GhostWithAPulse.
+            </p>
+            <p id="char-piggie-back">
+                Gift art for Oxillious - fox girl and elf boy belong to Oxillious and GhostWithAPulse respectively.
+            </p>
+            <p id="char-snow-leopard">
+                Gift art for an anonymous friend on Facebook of their character.
+            </p>
+            <p id="char-relay">
+                Gift art for Railfur93.
+            </p>
+            <p id="char-rudolph">
+                An entry for a Christmas art competition run by <a href="https://www.yoobee.ac.nz/">Yoobee Colleges</a>.
+            </p>
+            <p id="char-spook-phantasm-kiss">
+                A fun little personal art piece. Characters belong to GhostWithAPulse.
+            </p>
+            <p id="char-werewolf">
+                Personal art for a 'Goretober' art prompt. The prompt used for this one was 'claws.'
+            </p>
+            <p id="char-maple-tree">
+                Personal character art made for the opening scene in the game, Dearest Demons - a psychological horror game currently being developed by GhostWithAPulse.
+            </p>
+        </div>
+
+        <!-- X (Exit) Button -->
+        <img src="../assets/images/downloaded-icons/x-icon.png" alt="The 'X' exit button." class="exit-button" id="char-exit-button" onclick="exitPopUp('character')">
 
         <!-- Footer -->
         <footer>
             <p>©2024 All rights reserved. Every illustration shown on this page was made by Nathan Ki aka ghost.with.a.pulse.</p>
-            <p>However, not all characters shown belong to the artist. Hover over each image to view ownership details.</p>
+            <p>However, not all characters shown belong to the artist. Click on each image to view ownership details.</p>
             <p>Instagram, Twitter & Telegram icons designed by <a href="www.freepik.com"><span class="freepik-link">Freepik</span></a> and used under a free licence.</p>
             <p>X button (for pop-ups) designed by <a href="https://www.freepik.com/author/pixelverse"><span class="freepik-link">@PixelVerse</span></a> and used under a free licence.</p>
             <div class="social-icons-box">
