Finished adding all the pop-up boxes to the icons page!

--- a/public/icons.html
+++ b/public/icons.html
@@ -24,30 +24,76 @@
         <div class="text-box">
             <a href="../index.html"><h1><span class="username">@ghost.with.a.pulse</span> Online Art Portfolio</h1></a>
             <h2>Icons & Portraits</h2>
-            <p>Tip: Hover over the images below to find out more about each piece.</p>
+            <p>Tip: Click on the images below to find out more about each piece.</p>
         </div>
 
         <!-- The Art -->
         <div class="art-box">
-            <img src="../assets/images/art-images/icons/Luca.jpg" alt="A portrait of a nonbinary person with curly hair and glasses.">
-            <img src="../assets/images/art-images/icons/Chroi.jpg" alt="A portrait of a man with bird eyes and long wavy hair.">
-            <img src="../assets/images/art-images/icons/Abigail.jpg" alt="A portrait of a woman with long straight hair.">
-            <img src="../assets/images/art-images/icons/Corpsie.jpg" alt="A portrait of an anthro hare covered in stitches.">
-            <img src="../assets/images/art-images/icons/Chloe.jpg" alt="A portrait of an alien boy with curly hair wearing a tracking collar.">
-            <img src="../assets/images/art-images/icons/Daisy.jpg" alt="A portrait of a cartoonish sheep character.">
-            <img src="../assets/images/art-images/icons/Meddy.jpg" alt="A cartoonish portrait of a wolf.">
-            <img src="../assets/images/art-images/icons/Oxifawkes.png" alt="A cartoonish portrait of a fox character with wavy hair.">
-            <img src="../assets/images/art-images/icons/Pan.png" alt="A cartoonish portrait of a silken windhound character with big eyes.">
-            <img src="../assets/images/art-images/icons/Peek.jpg" alt="A portrait of a horse-looking creature with a wide smile and sharp teeth, with the words 'Problem, Love?' written next to it.">
-            <img src="../assets/images/art-images/icons/Phantasm.jpg" alt="A portrait of a creature with big eyes, a trunk, dragon horns and wings, with the words 'Ghost With a Pulse' written in the background.">
-            <img src="../assets/images/art-images/icons/Vex.jpg" alt="A portrait of an elf-looking character with shoulder-length wavy hair and a sly smile.">
-            <img src="../assets/images/art-images/icons/Whippet.jpg" alt="A portrait of a whippet with big, empty black eyes.">
+            <img src="../assets/images/art-images/icons/Luca.jpg" alt="A portrait of a nonbinary person with curly hair and glasses." onclick="popUp('icon', 1)">
+            <img src="../assets/images/art-images/icons/Chroi.jpg" alt="A portrait of a man with bird eyes and long wavy hair." onclick="popUp('icon', 2)">
+            <img src="../assets/images/art-images/icons/Abigail.jpg" alt="A portrait of a woman with long straight hair." onclick="popUp('icon', 3)">
+            <img src="../assets/images/art-images/icons/Corpsie.jpg" alt="A portrait of an anthro hare covered in stitches." onclick="popUp('icon', 4)">
+            <img src="../assets/images/art-images/icons/Chloe.jpg" alt="A portrait of an alien boy with curly hair wearing a tracking collar." onclick="popUp('icon', 5)">
+            <img src="../assets/images/art-images/icons/Daisy.jpg" alt="A portrait of a cartoonish sheep character." onclick="popUp('icon', 6)">
+            <img src="../assets/images/art-images/icons/Meddy.jpg" alt="A cartoonish portrait of a wolf." onclick="popUp('icon', 7)">
+            <img src="../assets/images/art-images/icons/Oxifawkes.png" alt="A cartoonish portrait of a fox character with wavy hair." onclick="popUp('icon', 8)">
+            <img src="../assets/images/art-images/icons/Pan.png" alt="A cartoonish portrait of a silken windhound character with big eyes." onclick="popUp('icon', 9)">
+            <img src="../assets/images/art-images/icons/Peek.jpg" alt="A portrait of a horse-looking creature with a wide smile and sharp teeth, with the words 'Problem, Love?' written next to it." onclick="popUp('icon', 10)">
+            <img src="../assets/images/art-images/icons/Phantasm.jpg" alt="A portrait of a creature with big eyes, a trunk, dragon horns and wings, with the words 'Ghost With a Pulse' written in the background." onclick="popUp('icon', 11)">
+            <img src="../assets/images/art-images/icons/Vex.jpg" alt="A portrait of an elf-looking character with shoulder-length wavy hair and a sly smile." onclick="popUp('icon', 12)">
+            <img src="../assets/images/art-images/icons/Whippet.jpg" alt="A portrait of a whippet with big, empty black eyes." onclick="popUp('icon', 13)">
         </div>
+
+        <!-- Text Pop-Up -->
+        <div class="pop-up-box" id="icon-pop-up">
+            <p id="icon-luca">
+                Personal character art of Luca Galewood - a protagonist in GhostWithAPulse's first full-length novel (in progress), 'The Daffodil King.'
+            </p>
+            <p id="icon-lillian">
+                Personal character art of Lillían Chroí - a protagonist in GhostWithAPulse's first full-length novel (in progress), 'The Daffodil King.'
+            </p>
+            <p id="icon-abigail">
+                Personal character art of Abigail Sayers - a central character in GhostWithAPulse's first full-length novel (in progress), 'The Daffodil King.'
+            </p>
+            <p id="icon-corpsie">
+                Personal character art for a 'Goretober' art prompt. The prompt used for this art was 'stitches.' The character belongs to GhostWithAPulse.
+            </p>
+            <p id="icon-chloe">
+                Personal art of Chloe - a character made for a collaborative writing project online.
+            </p>
+            <p id="icon-daisy">
+                Gift art of Daisy - a character belonging to Lucy.
+            </p>
+            <p id="icon-meddy">
+                Gift art for Meddyan.
+            </p>
+            <p id="icon-oxifawkes">
+                Gift art of Oxifawkes - a character belonging to Oxillious.
+            </p>
+            <p id="icon-pan">
+                Personal art of Pandaemonium - a character belonging to GhostWithAPulse.
+            </p>
+            <p id="icon-peek">
+                Personal art of Peek-A-Boo - a central character in GhostWithAPulse's first full-length novel (in progress), 'The Daffodil King.'
+            </p>
+            <p id="icon-phantasm">
+                Personal art of Phantasm - a character belonging to GhostWithAPulse.
+            </p>
+            <p id="icon-vex">
+                Gift art of Vex aka Vexie - a character belonging to Oxillious.
+            </p>
+            <p id="icon-whippet">
+                Personal art made for the opening scene in the game, Dearest Demons - a psychological horror game currently being developed by GhostWithAPulse.
+            </p>
+        </div>
+
+        <!-- X (Exit) Button -->
+        <img src="../assets/images/downloaded-icons/x-icon.png" alt="The 'X' exit button." class="exit-button" id="icon-exit-button" onclick="exitPopUp('icon')">
 
         <!-- Footer -->
         <footer>
             <p>©2024 All rights reserved. Every illustration shown on this page was made by Nathan Ki aka ghost.with.a.pulse.</p>
-            <p>However, not all characters shown belong to the artist. Hover over each image to view ownership details.</p>
+            <p>However, not all characters shown belong to the artist. Click on each image to view ownership details.</p>
             <p>Instagram, Twitter & Telegram icons designed by <a href="www.freepik.com"><span class="freepik-link">Freepik</span></a> and used under a free licence.</p>
             <p>X button (for pop-ups) designed by <a href="https://www.freepik.com/author/pixelverse"><span class="freepik-link">@PixelVerse</span></a> and used under a free licence.</p>
             <div class="social-icons-box">
