Website is now fully responsive!

--- a/public/character-art.html
+++ b/public/character-art.html
@@ -83,7 +83,7 @@
                 Gift art for TheDerpyHyena.
             </p>
             <p id="char-hare">
-                Personal character art.
+                Personal character art of Corpsie the hare.
             </p>
             <p id="char-izzy">
                 Gift art for dazer_dude.
