Added a deer portrait that I just completed to the icons page.

--- a/public/icons.html
+++ b/public/icons.html
@@ -42,6 +42,7 @@
             <img src="../assets/images/art-images/icons/Phantasm.jpg" alt="A portrait of a creature with big eyes, a trunk, dragon horns and wings, with the words 'Ghost With a Pulse' written in the background." onclick="popUp('icon', 11)">
             <img src="../assets/images/art-images/icons/Vex.jpg" alt="A portrait of an elf-looking character with shoulder-length wavy hair and a sly smile." onclick="popUp('icon', 12)">
             <img src="../assets/images/art-images/icons/Whippet.jpg" alt="A portrait of a whippet with big, empty black eyes." onclick="popUp('icon', 13)">
+            <img src="../assets/images/art-images/icons/Deer.jpg" alt="A portrait of a deer with hibiscus flowers tangled in its antlers." onclick="popUp('icon', 14)">
         </div>
 
         <!-- Text Pop-Up -->
@@ -84,6 +85,9 @@
             </p>
             <p id="icon-whippet">
                 Personal art made for the opening scene in the game, Dearest Demons - a psychological horror game currently being developed by GhostWithAPulse.
+            </p>
+            <p id="icon-deer">
+                Gift art for GhostWithAPulse's grandfather.
             </p>
         </div>
 
